# itmo-containers-2024

./: Dockerfile  Dockerfile_bad  README.md  app_deploy.yaml  app_service.yaml  db_deploy.yaml  db_service.yaml  docker-compose.yml  llm-secret.yaml  nextcloud.yml  nextcloud_configmap.yml  pg_deployment.yml  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
lab2/: Dockerfile  README.md  db.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
lab2/.streamlit/: config.toml
lab4_itmo/: README.md  app_deploy.yaml  app_service.yaml  db_deploy.yaml  db_service.yaml  llm-secret.yaml
lab4_itmo/lab2/: Dockerfile  README.md  pyproject.toml  requirements.txt
