[tool.poetry]
name = "itmo-containers-2024"
version = "0.1.0"
description = ""
authors = ["Андрей Четвергов <chet-off1228@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
langchain = "^0.3.9"
langchain-ollama = "^0.2.1"
ollama = "^0.4.2"
langchain-community = "^0.3.9"
gigachat = "^0.1.36"
transformers = "^4.47.0"
vllm = "^0.6.4.post1"
replicate = "^1.0.4"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
